# API_FOR_NIR_ANALYSIS

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  ML_model.py  README.md  analysis.py  desktop.ini  draw.py  load_data.py  model_class.py  preprocessing.py  pyproject.toml  readme.md  requirements.txt  run_gui.py  setup.py  test_structure.py  utils.py
AnalysisClass/: CreateTrainReport.py  Create_rec_task.py  Create_train_task.py  DataAnalysisReport.py
html/: utils.html
nirapi/: ML_model.py  __init__.py  analysis.py  automl.py  config.py  draw.py  evaluation.py  featsec.py  file_utils.py  load_data.py  model_class.py  preprocessing.py  readme.md  reconstruction.py  utils.py  wavelength.py  wavelength_dict.pkl
nirapi/AnalysisClass/: CreateTrainReport.py  Create_rec_task.py  Create_train_task.py  S21_6波段.csv  __init__.py  testDAR.py
tests/: __init__.py  test_analysis.py  test_model_class.py  test_preprocessing.py
