[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nirapi"
version = "1.0.0"
description = "A Near-Infrared Spectroscopy Analysis API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "zata"}
]
license = {text = "MIT"}
[project.urls]
Homepage = "https://github.com/zata/nirapi"
"Bug Tracker" = "https://github.com/zata/nirapi/issues"
Documentation = "https://github.com/zata/nirapi#readme"
"Source Code" = "https://github.com/zata/nirapi"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["NIR", "spectroscopy", "analysis", "machine-learning"]
dependencies = [
    "numpy",
    "pandas", 
    "scikit-learn",
    "scipy",
    "matplotlib",
    "seaborn",
    "plotly",
    "optuna",
    "pybaselines",
    "xgboost",
    "catboost", 
    "lightgbm",
    "obspy",
    "tqdm",
    "requests",
    "pymysql",
    "joblib",
]
